--- a/dc_servo/MDK-ARM/DCservo/DCservo.build_log.htm
+++ b/dc_servo/MDK-ARM/DCservo/DCservo.build_log.htm
@@ -21,20 +21,37 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.7.0
 Dialog DLL:      TCM.DLL V1.46.0.0
  
 <h2>Project:</h2>
-C:\Users\Hieu\Downloads\M4_DC servo\M4_DC servo\M4_DC servo\DCservo\MDK-ARM\DCservo.uvprojx
+H:\OneDrive - hcmute.edu.vn\Desktop\Servo\dc_servo\MDK-ARM\DCservo.uvprojx
 Project File Date:  10/26/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Build target 'DCservo'
+Rebuild target 'DCservo'
+assembling startup_stm32f103xe.s...
+compiling stm32f1xx_it.c...
+compiling system_stm32f1xx.c...
+compiling stm32f1xx_hal_msp.c...
+compiling stm32f1xx_hal_gpio_ex.c...
 compiling main.c...
-../Src/main.c(366): warning:  #188-D: enumerated type mixed with another type
+../Src/main.c(379): warning:  #188-D: enumerated type mixed with another type
     HAL_GPIO_WritePin(GPIOC, GPIO_PIN_3, (uint8_t)(direction));
-../Src/main.c(373): warning:  #186-D: pointless comparison of unsigned integer with zero
+../Src/main.c(386): warning:  #186-D: pointless comparison of unsigned integer with zero
     else if (pwm < 0)
 ../Src/main.c: 2 warnings, 0 errors
+compiling stm32f1xx_hal_tim.c...
+compiling stm32f1xx_hal_tim_ex.c...
+compiling stm32f1xx_hal_cortex.c...
+compiling stm32f1xx_hal_rcc_ex.c...
+compiling stm32f1xx_hal_pwr.c...
+compiling stm32f1xx_hal.c...
+compiling stm32f1xx_hal_gpio.c...
+compiling stm32f1xx_hal_dma.c...
+compiling stm32f1xx_hal_rcc.c...
+compiling stm32f1xx_hal_flash.c...
+compiling stm32f1xx_hal_flash_ex.c...
+compiling stm32f1xx_hal_uart.c...
 linking...
-Program Size: Code=13348 RO-data=496 RW-data=64 ZI-data=1368  
+Program Size: Code=13392 RO-data=496 RW-data=64 ZI-data=1368  
 FromELF: creating hex file...
 "DCservo\DCservo.axf" - 0 Error(s), 2 Warning(s).
 
@@ -59,7 +76,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.6.0
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:08
 </pre>
 </body>
 </html>
